--- a/Login page/index.html
+++ b/Login page/index.html
@@ -3,32 +3,36 @@
 <head>
     <link rel="icon" type="" href="imgs/283-2837538_login-icon-line-icons-iconscout-login-icon-images.png">
     <link rel="stylesheet" href="style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+        </style>
     <title>Login Page</title>
 </head>
 <body>
+
     <Section class="Login">
         <H1>Login</H1>
         <form action="login page" method="get" class="Usuario">
         <div class="input-box">
             <label for="Usuario">Nombre:</label><br>
-            <input type="text" placeholder="Nombre Completo" name="Usuario"><br>
+            <input type="text" placeholder="Nombre Completo" name="Usuario" class="info"><br>
         </div>
         <div class="input-box">
             <label for="password">Contraseña:</label><br>
-            <input type="password" placeholder="Contraseña" name="password"><br>
+            <input type="password" placeholder="Contraseña" name="password" class="info"><br>
         </div>
         <div class="input-box">
             <label for="email">Correo Electronico:</label><br>
-            <input type="email" placeholder="Correo Electronico" name="email"><br>
+            <input type="email" placeholder="Correo Electronico" name="email" class="info"><br>
         </div>  
-        <div>
+        <div class="input-box">
                 <input type="submit" name="submit" id="Enviar">
          </div>
         </form>
         
     </Section>
     <footer>
-
+        
     </footer>
 </body>
 </html>
