add: Pequeños cambios en las fuentes y bordes

--- a/Login page/index.html
+++ b/Login page/index.html
@@ -4,7 +4,9 @@
     <link rel="icon" type="" href="imgs/283-2837538_login-icon-line-icons-iconscout-login-icon-images.png">
     <link rel="stylesheet" href="style.css">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Cinzel:wght@400..900&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Cinzel:wght@400..900&family=Literata:ital,opsz,wght@0,7..72,200..900;1,7..72,200..900&display=swap');
         </style>
     <title>Login Page</title>
 </head>
@@ -28,11 +30,6 @@
         <div class="input-box">
                 <input type="submit" name="submit" id="Enviar">
          </div>
-        </form>
-        
     </Section>
-    <footer>
-        
-    </footer>
 </body>
 </html>
