--- a/Login page/index.html
+++ b/Login page/index.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="icon" type="" href="imgs/283-2837538_login-icon-line-icons-iconscout-login-icon-images.png">
     <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Cinzel:wght@400..900&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
@@ -11,25 +12,24 @@
     <title>Login Page</title>
 </head>
 <body>
-
-    <Section class="Login">
-        <H1>Login</H1>
-        <form action="login page" method="get" class="Usuario">
-        <div class="input-box">
-            <label for="Usuario">Nombre:</label><br>
-            <input type="text" placeholder="Nombre Completo" name="Usuario" class="info"><br>
+    <section class="fondo">
+        <h1>Login</h1>
+        <div class="formulario">
+            <form action="i">
+                <div class="datos">
+                    <input type="text" placeholder="Nombre Completo" class="usuario" > 
+                </div>
+                <div class="datos">
+                    <input type="password" placeholder="Contaseña" class="usuario">
+                </div>
+                <div class="datos">
+                    <input type="email" placeholder="Correo electronico" class="usuario">
+                </div>
+                <div>
+                    <input type="submit" class="enviar" placeholder="Submit">
+                </div>
+            </form>
         </div>
-        <div class="input-box">
-            <label for="password">Contraseña:</label><br>
-            <input type="password" placeholder="Contraseña" name="password" class="info"><br>
-        </div>
-        <div class="input-box">
-            <label for="email">Correo Electronico:</label><br>
-            <input type="email" placeholder="Correo Electronico" name="email" class="info"><br>
-        </div>  
-        <div class="input-box">
-                <input type="submit" name="submit" id="Enviar">
-         </div>
-    </Section>
+    </section>
 </body>
 </html>
