add: Actualizacion de la pagina

--- a/Login page/index.html
+++ b/Login page/index.html
@@ -15,18 +15,20 @@
     <section class="fondo">
         <h1>Login</h1>
         <div class="formulario">
-            <form action="i">
+            <form>
                 <div class="datos">
+                    <i class='bx bx-user'></i>
                     <input type="text" placeholder="Nombre Completo" class="usuario" > 
                 </div>
                 <div class="datos">
+                    <i class='bx bxs-lock-alt' ></i>
                     <input type="password" placeholder="Contaseña" class="usuario">
                 </div>
                 <div class="datos">
                     <input type="email" placeholder="Correo electronico" class="usuario">
                 </div>
-                <div>
-                    <input type="submit" class="enviar" placeholder="Submit">
+                <div class="send">
+                    <i class='bx bxs-send' ></i><input type="submit" class="submit" placeholder="Submit">
                 </div>
             </form>
         </div>
